[Picture in Picture] Letterbox video during window resizing.

This change updates the way Picture-in-Picture window resizing is
handled.

Previously, there was an issue where OverlayWindowViews attempts to
resize itself in the middle of already changing its size, which puts
aura into a conflicted state.

This is an initial step towards allowing the window to adhere to the
video aspect ratio by just letterboxing the video. The window can be
of any dimension as long as it is constrained by the already given
min and max values of the window.

Bug: 845747 829677
Change-Id: I6a120f3d346f7aa64909b06d5f48068497d8d7d7
Reviewed-on: https://chromium-review.googlesource.com/1080129
Commit-Queue: apacible <apacible@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563851}
Former-commit-id: 17982700ad2b8ed7b1c139ab80afdad17d15dd40