content/browser/web_contents/web_contents_impl_unittest.cc
@@ -3581,6 +3581,7 @@ class TestOverlayWindow : public OverlayWindow {
   ui::Layer* GetControlsBackgroundLayer() override { return nullptr; }
   ui::Layer* GetCloseControlsLayer() override { return nullptr; }
   ui::Layer* GetPlayPauseControlsLayer() override { return nullptr; }
+  gfx::Rect GetVideoBounds() override { return gfx::Rect(); }
   gfx::Rect GetCloseControlsBounds() override { return gfx::Rect(); }
   gfx::Rect GetPlayPauseControlsBounds() override { return gfx::Rect(); }
 
